syntax = "proto3";

package iop;
option go_package = "./iop";

message SendRRequest {
  RDeal R = 1;
}

message RDeal {
  bytes R = 1;
  bytes index = 2;
}

message SendRResponse {
}


message SendEnrollRequest {
  EnrollDeal Enroll = 1;
}

message EnrollDeal {
  bytes reputation = 1;
  bytes index = 2;
}

message SendEnrollResponse {
  bool EnrollSuccess = 1;
}


message SendGetEnrollNodesRequest {
  bool getNodes = 1;
}

message SendEnrollNodesResponse {
  bytes EnrollNodes = 1;
}


message ValidateRequest {
  enum Type {
    unknown = 0;
    block = 1;
    transaction = 2;
  }
  Type type = 1;
  bytes hash = 2;
}

message ValidateResponse {
  bytes hash = 1;
  bool valid = 2;
  int64 blockNumber = 3;
  bytes signature = 4;
}

service OracleNode {
  rpc SendR(SendRRequest) returns (SendRResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  rpc Enroll(SendEnrollRequest) returns (SendEnrollResponse);
  rpc GetEnrollNodes(SendGetEnrollNodesRequest) returns (SendEnrollNodesResponse);
}
